# Code-Swarm

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  SECURITY.md  STATUS.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-extra.txt  requirements.txt  setup.cfg  test_grpc.py  vercel-deploy.sh  vercel.json
.code-swarm/: agents.json  grpc_health  health.json  tasks.json
.code-swarm/cache/: cache.json
.github/workflows/: ci.yml  deploy.yml  security.yml  test.yml  test_hermes.yml
agents/asclepius/: system_prompt.md
agents/atlas/: config.yaml  system_prompt.md
agents/hades/: config.yaml  system_prompt.md
agents/hermes/: config.yaml  system_prompt.md
agents/iris/: config.yaml  system_prompt.md
agents/janus/: config.yaml  system_prompt.md
agents/prometheus/: config.yaml  system_prompt.md
agents/sin-solo/: config.yaml  system_prompt.md
agents/sin-zeus/: config.yaml  system_prompt.md
agents/sub/aegis/: config.yaml  system_prompt.md
agents/sub/apollo/: system_prompt.md
agents/sub/argus/: system_prompt.md
agents/sub/athena/: system_prompt.md
agents/sub/audio_agent/: config.yaml  system_prompt.md
agents/sub/chronos/: system_prompt.md
agents/sub/daedalus/: system_prompt.md
agents/sub/hephaestus/: config.yaml  system_prompt.md
agents/sub/hermes_scout/: system_prompt.md
agents/sub/metis/: config.yaml  system_prompt.md
agents/sub/multimedia_looker/: config.yaml  system_prompt.md
agents/sub/nemesis/: config.yaml  system_prompt.md
agents/sub/themis/: system_prompt.md
agents/sub/web_recherche_agent/: system_prompt.md
agents/zeus/: config.yaml  system_prompt.md
api/: code_swarm_pb2.py  code_swarm_pb2_grpc.py  grpc_server.py  main.py  middleware.py
api/proto/: code_swarm.proto
auth/: __init__.py  security.py
cache/: redis.py
cli/: main.py  recursivemas.py
code_swarm/: __init__.py  agent_loop.py  checkpointing.py  edit_engine.py  events.py  mcp_hub.py  memory.py  modes.py  registry.py  repo_map.py  sub_agent.py
configs/: oh-my-opencode.json  opencode.json
db/: database.py  schema.sql
docs/: getting-started.md  index.md  mkdocs.yml
docs/api/: rest.md
docs/architecture/: overview.md
docs/guides/: cli.md  deployment-vercel.md
feedback/: bayesian.py  error_analysis.py  error_tracking.py  scoring.py  self_improvement.py
feedback/rlhf/: self_improvement.py
helm/code-swarm/: Chart.yaml  values.yaml
helm/code-swarm/templates/: deployment.yaml  hpa.yaml  network-policy.yaml  service.yaml
k8s/: values.yaml
langgraph/: graph.py  state.py
memory/: hybrid_retriever.py  neo4j_adapter.py  qdrant_adapter.py  state.py  vector_db.py
monitoring/: metrics.py
recursivemas/: README.md  load_from_repo.py  run.py  system_loader.py
simone_mcp/: bridge.py  client.py
storage/: s3.py
streaming/: websocket.py
swarm_pipeline/: __init__.py  graph.py  recursive_link.py  state.py
tests/: conftest.py  test_stolen_modules.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_services.py
tests/unit/: test_core.py  test_recursivemas.py  test_security.py
vector/: vector_db.py
