[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "code-swarm"
version = "0.1.0a1"
description = "OpenSIN Code-Swarm: free, MIT-licensed multi-agent coding fleet with FastAPI + gRPC + WebSocket streaming."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OpenSIN", email = "hello@opensin.ai" },
]
keywords = [
    "ai",
    "coding-agent",
    "llm",
    "multi-agent",
    "mcp",
    "langgraph",
    "fastapi",
    "grpc",
    "opensin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph==0.1.5",
    "typer==0.12.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.0",
    "pydantic==2.7.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.1.3",
    "python-multipart==0.0.9",
    "slowapi==0.1.9",
    "prometheus-client==0.20.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-exporter-otlp==1.25.0",
    "redis==5.0.6",
    "aioredis==2.0.1",
    "boto3==1.34.114",
    "botocore==1.34.114",
    "faiss-cpu==1.8.0",
    "numpy==1.26.4",
    "docker==7.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]
build = [
    "hatch>=1.12",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://opensin-ai.github.io/Infra-SIN-OpenCode-Stack/"
Documentation = "https://opensin-ai.github.io/Infra-SIN-OpenCode-Stack/components/code-swarm/"
Repository = "https://github.com/OpenSIN-Code/Code-Swarm"
Issues = "https://github.com/OpenSIN-Code/Code-Swarm/issues"
Releases = "https://github.com/OpenSIN-Code/Code-Swarm/releases"
Sponsor = "https://github.com/sponsors/Delqhi"

[project.scripts]
code-swarm = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "code_swarm",
    "agents",
    "api",
    "auth",
    "cache",
    "cli",
    "configs",
    "db",
    "feedback",
    "langgraph",
    "memory",
    "monitoring",
    "simone_mcp",
    "storage",
    "streaming",
    "vector",
]

[tool.hatch.build.targets.sdist]
include = [
    "/code_swarm",
    "/agents",
    "/api",
    "/auth",
    "/cache",
    "/cli",
    "/configs",
    "/db",
    "/feedback",
    "/langgraph",
    "/memory",
    "/monitoring",
    "/simone_mcp",
    "/storage",
    "/streaming",
    "/vector",
    "/README.md",
    "/PLAN.md",
    "/.env.example",
    "/requirements.txt",
    "/setup.cfg",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RET"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
